<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Поиск"
        app:showAsAction="always" />
    <item
        android:id="@+id/mPerson"
        android:icon="@drawable/letter_a"
        android:title="@string/imProfile"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/imProfile"
                android:title="@string/imProfile"
                app:showAsAction="never" />
            <item
                android:id="@+id/imSettings"
                android:title="@string/imsettings"
                android:visible="false"
                app:showAsAction="never" />
            <item
                android:id="@+id/imExit"
                android:title="@string/imExit"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>