<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clPrefs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Prefs">

    <LinearLayout
        android:id="@+id/llOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/settings"
            android:onClick="fontvSettingsClick"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ivPaste"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@drawable/paste" />

        <TextView
            android:id="@+id/tvOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableEnd="@drawable/done"
            android:onClick="onTvOKClick"
            android:visibility="invisible" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llOK">

        <LinearLayout
            android:id="@+id/llInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ScrollView
        android:id="@+id/svPerMenu"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:fillViewport="false"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llOK">

        <LinearLayout
            android:id="@+id/llPerfMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPerfAttr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fontvPerfClick"
                android:text="@string/PerfAttr"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvPerfCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fontvPerfClick"
                android:text="@string/PerfCategory"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvPerfGood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fontvPerfClick"
                android:text="@string/PerfGood"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvPerfBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fontvPerfClick"
                android:text="@string/PerfBasket"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvPerfOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fontvPerfClick"
                android:text="@string/PerfOrder"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvPerfState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fontvPerfClick"
                android:text="@string/PerfState"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvPerfActions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fontvPerfClick"
                android:text="@string/PerfActions"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvPerfUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fontvPerfClick"
                android:text="@string/PerfUser"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvPerfRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fontvPerfClick"
                android:text="@string/PerfRole"
                android:textColor="#000000"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:focusableInTouchMode="false"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="30dp">

        <ImageButton
            android:id="@+id/ivEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/edit" />

        <ImageButton
            android:id="@+id/ivCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/copy" />

        <ImageButton
            android:id="@+id/ivCut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:visibility="visible"
            app:srcCompat="@drawable/cut" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>